--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ProjectRTC",
   "version": "0.4.0",
-  "author": "Pierre Chabardes <pierre@chabardes.net>",
+  "author": "Nawab Alam <xyz@gmail.com>",
   "description": "a webRTC live streaming server",
   "scripts": {
     "start": "forever start app.js",
